# ChangeLog for media-libs/sdl-mixer
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/sdl-mixer/ChangeLog,v 1.22 2004/08/11 02:39:20 tgall Exp $

  10 Aug 2004; Tom Gall <tgall@gentoo.org> sdl-mixer-1.2.5-r1.ebuild:
  stable on ppc64, bug #57992

*sdl-mixer-1.2.5-r3 (27 May 2004)

  27 May 2004; Jason Eric Huebel <jhuebel@gentoo.org> 
  amd64 patches for mikmod.h and mikmod_internals.h, provided by Tyler Montbriand <tsm@accesscomm.ca>

*sdl-mixer-1.2.5-r2 (23 May 2004)

  23 May 2004; Mike Frysinger <vapier@gentoo.org>
  +files/1.2.5-system-mikmod.patch, +sdl-mixer-1.2.5-r2.ebuild:
  Version bump to use system version of mikmod instead of bundled #51852 by Paul
  de Vrieze

  10 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
  sdl-mixer-1.2.5-r1.ebuild:
  sdl-mixer is under the LGPL, not the GPL

  02 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
  sdl-mixer-1.2.5-r1.ebuild:
  don't RDEPEND on sed

  16 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  sdl-mixer-1.2.5-r1.ebuild:
  tighten DEPEND (bug #44817); add metadata file (games since we seem to be the
  biggest customer); inherit eutils for epatch

  14 Mar 2004; Stephen P. Becker <geoman@gentoo.org>
  sdl-mixer-1.2.5-r1.ebuild:
  Added ~mips keyword.

  06 Oct 2003; Aron Griffis <agriffis@gentoo.org> sdl-mixer-1.2.5-r1.ebuild:
  Stable on alpha

  25 Sep 2003; Michael Sterrett <msterret@gentoo.org>
  sdl-mixer-1.2.5-r1.ebuild:
  DEPEND on sed >= 4 for sed -i; more error messages

*sdl-mixer-1.2.5-r1 (24 Mar 2003)

  04 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Added patch so it'll detect smpeg correctly with gcc-3.x #27909.

  24 Mar 2003; Philip Walls <malverian@gentoo.org> sdl-mixer-1.2.5-r1.ebuild,
  files/digest-sdl-mixer-1.2.5-r1 :
  Thanks to Jordan <lx_xero@zapo.net> for this fix; Resolves bug 18011.
  sdl-mixer now looks in the correct directory for the timidity patches.

*sdl-mixer-1.2.5 (19 Mar 2003)
