@@ -1,11 +1,11 @@
-MD5 739e87a400f1d0731bcc8eb11ca204de ChangeLog 3379
+MD5 c57c7335beae6ebf60c4f3d32f4f87a5 ChangeLog 3509
+MD5 f3a5d6d8df875a5f30dcbe73e8021758 sdl-mixer-1.2.5-r1.ebuild 1357
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
-MD5 91c024c26269dbd5d39b18a998bb2831 sdl-mixer-1.2.5-r1.ebuild 1361
 MD5 1140a5210650bcee849976672f36652e sdl-mixer-1.2.5-r2.ebuild 1322
 MD5 4b0458f158946a0dce0aebec09ea7d29 sdl-mixer-1.2.5-r3.ebuild 1419
 MD5 f026901e029ec31037b0bca6dc7f07d8 files/1.2.5-gcc3.patch 1235
-MD5 7d7f6132f7f6957120c056b644ed4387 files/1.2.5-system-mikmod.patch 2019
 MD5 53b2015dae19981548f34d124a734f8e files/digest-sdl-mixer-1.2.5-r1 67
+MD5 7d7f6132f7f6957120c056b644ed4387 files/1.2.5-system-mikmod.patch 2019
 MD5 53b2015dae19981548f34d124a734f8e files/digest-sdl-mixer-1.2.5-r2 67
 MD5 53b2015dae19981548f34d124a734f8e files/digest-sdl-mixer-1.2.5-r3 67
 MD5 b20854212133319dd5b400f71a372bcb files/sdl-mixer-1.2.5-amd64-mikmod.patch 929
